# text-sql-mcp

./: .gitignore  pyproject.toml  run.sh
app/: main.py
app/api/: routes.py
app/core/: config.py  embeddings.py  llm.py  vector_store.py
app/models/: schema.py
app/services/: schema_embedder.py  sql_generator.py
